[metadata]
name = tynt
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/tynt
description = Astronomical filter bandpasses in Python
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 
   numpy
   astropy

[options.extras_require]
all =
    lxml
test =
    pytest
    pytest-doctestplus
    pytest-cov
    pytest-astropy
docs =
    sphinx
    sphinx-automodapi
    sphinx-astropy
    matplotlib
    sphinx-book-theme
    numpydoc

[options.package_data]
tynt = data/*.fits

[tool:pytest]
testpaths = "tynt" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[flake8]
max-line-length = 100
# E123: closing bracket does not match indentation of opening bracket's line
# E126: continuation line over-indented for hanging indent
# E226: missing whitespace around arithmetic operator
# E402: Module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore = E123,E126,E226,E402,W503,W504

[coverage:run]
omit =
  tynt/__init*
  tynt/conftest.py
  tynt/*setup_package*
  tynt/tests/*
  tynt/*/tests/*
  tynt/extern/*
  tynt/version*
  */tynt/__init*
  */tynt/conftest.py
  */tynt/*setup_package*
  */tynt/tests/*
  */tynt/*/tests/*
  */tynt/extern/*
  */tynt/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
